--- a/styles/style.css
+++ b/styles/style.css
@@ -4,16 +4,10 @@ html {
     /* Google fonts 输出的 CSS */
     font-family: 'Open Sans', sans-serif;
     background-color: #00539F;
+    background-image: url("../images/bc.png");
 }
 
-body {
-    width: 600px;
-    margin: 0 auto;
-    background-color: #FF9500;
-    padding: 0 20px 20px 20px;
-    border: 5px solid black;
 
-}
 
 h1 {
     font-size: 60px;
@@ -32,6 +26,8 @@ p, li {
 }
 
 img {
+    /* block：此元素将显示为块级元素。 
+    上下距离为0，左右居中*/
     display: block;
     margin: 0 auto;
   }
